<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab2_manipulator</name>
  <version>0.0.0</version>
  <description>Wizualizacja manipulatora</description>
  <maintainer email="przemekdaniel@interia.eu">przemek</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
