<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab4_interpolacja</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="przemekdaniel@interia.eu">przemek</maintainer>
  <license>Apache License 2.0</license>


  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>interpolation_interfaces</exec_depend>
</package>
